bug：文件不存在异常

--- a/src/main/resources/conf.properties
+++ b/src/main/resources/conf.properties
@@ -6,8 +6,8 @@ mapperxml_package=mapper
 service_package=model
 controller_package=controller
 #seprate by comma:%=all tables / tableA,tableB
-tables=all
+tables=t_sys_city
 #the modules need to create,default all:all,bean,mapper,service,impl,controller,xml
-needModules=xml
+needModules=all
 #force create file,default false
 force=true
