--- a/.gitignore
+++ b/.gitignore
@@ -7,8 +7,10 @@
 *.jar
 *.war
 *.ear
-
+jdbcbak.properties
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
 target/
 /target/
+*/interfaces/*
+/*mapper/*
