--- a/src/main/resources/conf.properties
+++ b/src/main/resources/conf.properties
@@ -6,8 +6,8 @@ mapperxml_package=mapper
 service_package=model
 controller_package=controller
 #seprate by comma:%=all tables / tableA,tableB
-tables=t_sys_city
+tables=all
 #the modules need to create,default all:all,bean,mapper,service,impl,controller,xml
-needModules=all
+needModules=xml
 #force create file,default false
 force=true
