--- a/src/main/resources/conf.properties
+++ b/src/main/resources/conf.properties
@@ -8,6 +8,6 @@ controller_package=controller
 #seprate by comma:%=all tables / tableA,tableB
 tables=all
 #the modules need to create,default all:all,bean,mapper,service,impl,controller,xml
-needModules=xml
+needModules=all
 #force create file,default false
 force=true
