重要更新:1,支持分模块存放代码；2，为bean生成字段说明；3，其他,xml增加包围字段

--- a/src/main/resources/conf.properties
+++ b/src/main/resources/conf.properties
@@ -6,8 +6,11 @@ mapperxml_package=mapper
 service_package=model
 controller_package=controller
 #seprate by comma:%=all tables / tableA,tableB
-tables=all
+tables=t_com_category
 #the modules need to create,default all:all,bean,mapper,service,impl,controller,xml
 needModules=all
 #force create file,default false
 force=true
+#Is talbe have prefix,like t_com_company,the prefix is t_com,true=hava,false=no;
+prefix=true
+
