--- a/src/main/resources/conf.properties
+++ b/src/main/resources/conf.properties
@@ -6,7 +6,7 @@ mapperxml_package=mapper
 service_package=model
 controller_package=controller
 #seprate by comma:%=all tables / tableA,tableB
-tables=all
+tables=t_emp_employee
 #the modules need to create,default all:all,bean,mapper,service,impl,controller,xml
 needModules=all
 #force create file,default false
