--- a/src/main/resources/jdbc.properties
+++ b/src/main/resources/jdbc.properties
@@ -1,5 +1,5 @@
 jdbc_driverClassName=com.mysql.jdbc.Driver
 #-----------------\u672C\u5730-------------
-jdbc_url=jdbc:mysql://localhost:3306/teset?useUnicode=yes&characterEncoding=utf-8&allowMultiQueries=true
-jdbc_username=test
+jdbc_url=jdbc:mysql://127.0.0.1:3306/wuliu20160526?useUnicode=yes&characterEncoding=utf-8&allowMultiQueries=true
+jdbc_username=wl
 jdbc_password=123456
