增加是否需要字段和属性进行驼峰转换

--- a/src/main/resources/conf.properties
+++ b/src/main/resources/conf.properties
@@ -6,11 +6,12 @@ mapperxml_package=mapper
 service_package=model
 controller_package=controller
 #seprate by comma:%=all tables / tableA,tableB
-tables=t_emp_employee
+tables=t_ent_company,t_ent_jobinfo
 #the modules need to create,default all:all,bean,mapper,service,impl,controller,xml
-needModules=all
+needModules=bean
 #force create file,default false
 force=true
 #Is talbe have prefix,like t_com_company,the prefix is t_com,true=hava,false=no;
 prefix=true
-
+#default true
+underline2Camel=false
