修改了模板

--- a/src/main/resources/conf.properties
+++ b/src/main/resources/conf.properties
@@ -6,12 +6,12 @@ mapperxml_package=mapper
 service_package=model
 controller_package=controller
 #seprate by comma:%=all tables / tableA,tableB
-tables=t_ent_company,t_ent_jobinfo
+tables=t_ent_company,t_ent_jobinfo,t_ent_jobtype
 #the modules need to create,default all:all,bean,mapper,service,impl,controller,xml
-needModules=bean
+needModules=all
 #force create file,default false
 force=true
 #Is talbe have prefix,like t_com_company,the prefix is t_com,true=hava,false=no;
 prefix=true
 #default true
-underline2Camel=false
+underline2Camel=true
