--- a/src/main/resources/conf.properties
+++ b/src/main/resources/conf.properties
@@ -1,17 +1,19 @@
 #base package
-base_package=com.cnfwsy.interfaces
-bean_package=bean
-mapper_package=mapper
+base_package=com.hpxs
+bean_package=entity
+mapper_package=dao
 mapperxml_package=mapper
-service_package=model
+service_package=service
 controller_package=controller
 #seprate by comma:%=all tables / tableA,tableB
-tables=t_ent_company,t_ent_jobinfo,t_ent_jobtype
+tables=all
+#tables=t_ent_company,t_ent_jobinfo,t_ent_jobtype
 #the modules need to create,default all:all,bean,mapper,service,impl,controller,xml
 needModules=all
 #force create file,default false
 force=true
 #Is talbe have prefix,like t_com_company,the prefix is t_com,true=hava,false=no;
-prefix=true
+#prefix=true
+prefix=false
 #default true
 underline2Camel=true
