--- a/src/main/resources/jdbc.properties
+++ b/src/main/resources/jdbc.properties
@@ -1,5 +1,5 @@
 jdbc_driverClassName=com.mysql.jdbc.Driver
 #-----------------\u672C\u5730-------------
-jdbc_url=jdbc:mysql://localhost:3306/spider?useUnicode=yes&characterEncoding=utf-8&allowMultiQueries=true
-jdbc_username=root
-jdbc_password=x3,ZWLT81(
+jdbc_url=jdbc:mysql://localhost:3306/hpxs_new?useUnicode=yes&characterEncoding=utf-8&allowMultiQueries=true
+jdbc_username=dbadmin
+jdbc_password=dbadminpass
