--- a/src/main/resources/conf.properties
+++ b/src/main/resources/conf.properties
@@ -1,14 +1,17 @@
-#base package
+#package
 base_package=com.hpxs
-bean_package=entity
-mapper_package=dao
-mapperxml_package=mapper
+entity_package=entity
+dao_package=dao
+xml_package=mapper
+model_package=model
 service_package=service
+serviceimpl_package=service.impl
 controller_package=controller
 #seprate by comma:%=all tables / tableA,tableB
 tables=all
 #tables=t_ent_company,t_ent_jobinfo,t_ent_jobtype
 #the modules need to create,default all:all,bean,mapper,service,impl,controller,xml
+# new modules values: all,entity,dao,mapperXml,daoTest,model,modelTest,service,serviceTest,serviceImpl,controller,controllerImpl
 needModules=all
 #force create file,default false
 force=true
@@ -17,3 +20,11 @@ force=true
 prefix=false
 #default true
 underline2Camel=true
+
+#entity suffix table "user" entity names "User" or "UserEntity" 
+#eneity_suffix=Entity
+eneity_suffix=
+#dao name table "user" dao names "UserDao" or "UserMapper"
+dao_name=Dao
+#implemention suffix
+impl_suffix=impl
