--- a/pom.xml
+++ b/pom.xml
@@ -48,6 +48,11 @@
 			<version>1.7.21</version>
 		</dependency>
 		<dependency>
+			<groupId>org.bgee.log4jdbc-log4j2</groupId>
+			<artifactId>log4jdbc-log4j2-jdbc4.1</artifactId>
+			<version>1.16</version>
+		</dependency>
+		<dependency>
 			<groupId>org.freemarker</groupId>
 			<artifactId>freemarker</artifactId>
 			<version>2.3.23</version>
@@ -87,18 +92,18 @@
 					<target>${javaLanguage.version}</target>
 				</configuration>
 			</plugin>
-			 <plugin>
-                  <groupId>org.eclipse.jetty</groupId>
-                  <artifactId>jetty-maven-plugin</artifactId>
-                  <version>9.2.15.v20160210</version>
-                  <configuration>
-                    <scanIntervalSeconds>10</scanIntervalSeconds>
-                    <war>${project.basedir}/target/code.war</war>
-                    <webApp>
-                          <contextPath>/code</contextPath>
-                    </webApp>
-                  </configuration>
-            </plugin>
+			<plugin>
+				<groupId>org.eclipse.jetty</groupId>
+				<artifactId>jetty-maven-plugin</artifactId>
+				<version>9.2.15.v20160210</version>
+				<configuration>
+					<scanIntervalSeconds>10</scanIntervalSeconds>
+					<war>${project.basedir}/target/code.war</war>
+					<webApp>
+						<contextPath>/code</contextPath>
+					</webApp>
+				</configuration>
+			</plugin>
 		</plugins>
 	</build>
 </project>
