--- a/src/main/resources/conf.properties
+++ b/src/main/resources/conf.properties
@@ -5,7 +5,7 @@ dao_package=dao
 xml_package=mapper
 model_package=model
 service_package=service
-serviceimpl_package=service.impl
+serviceimpl_package=impl
 controller_package=controller
 #seprate by comma:%=all tables / tableA,tableB
 tables=all
@@ -26,5 +26,10 @@ underline2Camel=true
 eneity_suffix=
 #dao name table "user" dao names "UserDao" or "UserMapper"
 dao_name=Dao
+mapperxml_name=Mapper
+service_need_i=false
+service_name=Service
 #implemention suffix
-impl_suffix=impl
+impl_suffix=Impl
+controller_name=Controller
+test_suffix=Test
