修改代码模板

--- a/src/main/resources/conf.properties
+++ b/src/main/resources/conf.properties
@@ -17,7 +17,7 @@ needModules=all
 force=true
 #Is talbe have prefix,like t_com_company,the prefix is t_com,true=hava,false=no;
 #prefix=true
-prefix=true
+prefix=false
 #default true
 underline2Camel=true
 
