--- a/zlinks-sample/src/main/resources/jdbc.properties
+++ b/zlinks-sample/src/main/resources/jdbc.properties
@@ -1,7 +1,4 @@
 jdbc_driverClassName=com.mysql.jdbc.Driver
-#jdbc_driverClassName=net.sf.log4jdbc.sql.jdbcapi.DriverSpy
-#-----------------\u672C\u5730-------------
-jdbc_url=jdbc:mysql://localhost:3306/test?useUnicode=yes&characterEncoding=utf-8&allowMultiQueries=true
-#jdbc_url= jdbc:log4jdbc:mysql://localhost:3306/hpxs_new?useUnicode=yes&characterEncoding=utf-8&allowMultiQueries=true
+jdbc_url=jdbc:mysql://localhost:3306/bb?useUnicode=yes&characterEncoding=utf-8&allowMultiQueries=true
 jdbc_username=root
 jdbc_password=z,123456
